Style: prevent overflowing tables

--- a/app/assets/stylesheets/thredded/base/_tables.scss
+++ b/app/assets/stylesheets/thredded/base/_tables.scss
@@ -8,6 +8,7 @@
     padding: 0.5rem 0.75rem;
     border-bottom: $thredded-base-border;
     vertical-align: middle;
+    word-break: break-word;
   }
 
   th {
